--- a/.github/workflows/latex.yaml
+++ b/.github/workflows/latex.yaml
@@ -33,6 +33,6 @@ jobs:
             latexmk slides.tex
       - uses: actions/upload-artifact@v4
         with:
-          name: 2025_JUN_10.pdf
+          name: 2025_JUN_10
           path: docs/presentations/2025_JUN_10/slides.pdf
           if-no-files-found: error
