--- a/test/golden/Sin.lc.code.gen.am
+++ b/test/golden/Sin.lc.code.gen.am
@@ -37,10 +37,10 @@
             )
         , IEndScope
         , IReceive
-            ( AIdent "var_c_v_32" )
+            ( AIdent "var_c_v_42" )
         , IPrintDouble
             ( VaAddr
-                ( AIdent "var_c_v_32" )
+                ( AIdent "var_c_v_42" )
             )
         , ISetReturn
             ( VaInt 0 )
@@ -82,11 +82,11 @@
         , IPrimBinOp PrimISub
         , IEndScope
         , IReceive
-            ( AIdent "var_c_a1_3" )
+            ( AIdent "var_c_a_4" )
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_c_a1_3" )
+                ( AIdent "var_c_a_4" )
             )
         , IPush
             ( VaAddr
@@ -98,14 +98,14 @@
             )
         , IEndScope
         , IReceive
-            ( AIdent "var_c_inp1_4" )
+            ( AIdent "var_c_inp1_5" )
         , IPush
             ( VaAddr
                 ( AIdent "var_aa_0_4" )
             )
         , IPush
             ( VaAddr
-                ( AIdent "var_c_inp1_4" )
+                ( AIdent "var_c_inp1_5" )
             )
         , IPrimBinOp PrimDMul
         , IExit
@@ -141,10 +141,10 @@
         , IPrimBinOp PrimILe
         , IEndScope
         , IReceive
-            ( AIdent "var_c_c_7" )
+            ( AIdent "var_c_c_8" )
         , ICondJump
             ( VaAddr
-                ( AIdent "var_c_c_7" )
+                ( AIdent "var_c_c_8" )
             ) 2
         , ISetReturn
             ( VaInt 1 )
@@ -159,11 +159,11 @@
         , IPrimBinOp PrimISub
         , IEndScope
         , IReceive
-            ( AIdent "var_c_a0_9" )
+            ( AIdent "var_c_a_10" )
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_c_a0_9" )
+                ( AIdent "var_c_a_10" )
             )
         , ICall
             ( VaAddr
@@ -171,14 +171,14 @@
             )
         , IEndScope
         , IReceive
-            ( AIdent "var_c_inp1_10" )
+            ( AIdent "var_c_inp1_11" )
         , IPush
             ( VaAddr
                 ( AIdent "var_e_x" )
             )
         , IPush
             ( VaAddr
-                ( AIdent "var_c_inp1_10" )
+                ( AIdent "var_c_inp1_11" )
             )
         , IPrimBinOp PrimIMul
         , IExit
@@ -221,7 +221,7 @@
             )
         , IEndScope
         , IReceive
-            ( AIdent "var_c_inp0_15" )
+            ( AIdent "var_c_inp0_17" )
         , IScope
         , IPush
             ( VaAddr
@@ -233,23 +233,23 @@
             )
         , IEndScope
         , IReceive
-            ( AIdent "var_c_inp_14" )
+            ( AIdent "var_c_inp_16" )
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_c_inp_14" )
+                ( AIdent "var_c_inp_16" )
             )
         , IPrimUnOp PrimIToD
         , IEndScope
         , IReceive
-            ( AIdent "var_c_inp1_15" )
+            ( AIdent "var_c_inp1_17" )
         , IPush
             ( VaAddr
-                ( AIdent "var_c_inp0_15" )
+                ( AIdent "var_c_inp0_17" )
             )
         , IPush
             ( VaAddr
-                ( AIdent "var_c_inp1_15" )
+                ( AIdent "var_c_inp1_17" )
             )
         , IPrimBinOp PrimDDiv
         , IExit
@@ -274,64 +274,10 @@
             )
         , IEndScope
         , IReceive
-            ( AIdent "var_c_inp0_18" )
-        , IScope
-        , IPush
-            ( VaInt 3 )
-        , IPush
-            ( VaAddr
-                ( AIdent "var_e_x" )
-            )
-        , ICall
-            ( VaAddr
-                ( AIdent "top_e_sinEntry" )
-            )
-        , IEndScope
-        , IReceive
-            ( AIdent "var_c_inp1_18" )
-        , IScope
-        , IPush
-            ( VaAddr
-                ( AIdent "var_c_inp0_18" )
-            )
-        , IPush
-            ( VaAddr
-                ( AIdent "var_c_inp1_18" )
-            )
-        , IPrimBinOp PrimDSub
-        , IEndScope
-        , IReceive
-            ( AIdent "var_c_inp0_20" )
-        , IScope
-        , IPush
-            ( VaInt 5 )
-        , IPush
-            ( VaAddr
-                ( AIdent "var_e_x" )
-            )
-        , ICall
-            ( VaAddr
-                ( AIdent "top_e_sinEntry" )
-            )
-        , IEndScope
-        , IReceive
-            ( AIdent "var_c_inp1_20" )
-        , IScope
-        , IPush
-            ( VaAddr
-                ( AIdent "var_c_inp0_20" )
-            )
-        , IPush
-            ( VaAddr
-                ( AIdent "var_c_inp1_20" )
-            )
-        , IPrimBinOp PrimDAdd
-        , IEndScope
-        , IReceive
             ( AIdent "var_c_inp0_22" )
         , IScope
         , IPush
-            ( VaInt 7 )
+            ( VaInt 3 )
         , IPush
             ( VaAddr
                 ( AIdent "var_e_x" )
@@ -355,10 +301,10 @@
         , IPrimBinOp PrimDSub
         , IEndScope
         , IReceive
-            ( AIdent "var_c_inp0_24" )
+            ( AIdent "var_c_inp0_25" )
         , IScope
         , IPush
-            ( VaInt 9 )
+            ( VaInt 5 )
         , IPush
             ( VaAddr
                 ( AIdent "var_e_x" )
@@ -369,50 +315,23 @@
             )
         , IEndScope
         , IReceive
-            ( AIdent "var_c_inp1_24" )
+            ( AIdent "var_c_inp1_25" )
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_c_inp0_24" )
+                ( AIdent "var_c_inp0_25" )
             )
         , IPush
             ( VaAddr
-                ( AIdent "var_c_inp1_24" )
+                ( AIdent "var_c_inp1_25" )
             )
         , IPrimBinOp PrimDAdd
-        , IEndScope
-        , IReceive
-            ( AIdent "var_c_inp0_26" )
-        , IScope
-        , IPush
-            ( VaInt 11 )
-        , IPush
-            ( VaAddr
-                ( AIdent "var_e_x" )
-            )
-        , ICall
-            ( VaAddr
-                ( AIdent "top_e_sinEntry" )
-            )
-        , IEndScope
-        , IReceive
-            ( AIdent "var_c_inp1_26" )
-        , IScope
-        , IPush
-            ( VaAddr
-                ( AIdent "var_c_inp0_26" )
-            )
-        , IPush
-            ( VaAddr
-                ( AIdent "var_c_inp1_26" )
-            )
-        , IPrimBinOp PrimDSub
         , IEndScope
         , IReceive
             ( AIdent "var_c_inp0_28" )
         , IScope
         , IPush
-            ( VaInt 13 )
+            ( VaInt 7 )
         , IPush
             ( VaAddr
                 ( AIdent "var_e_x" )
@@ -433,10 +352,91 @@
             ( VaAddr
                 ( AIdent "var_c_inp1_28" )
             )
+        , IPrimBinOp PrimDSub
+        , IEndScope
+        , IReceive
+            ( AIdent "var_c_inp0_31" )
+        , IScope
+        , IPush
+            ( VaInt 9 )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_e_x" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "top_e_sinEntry" )
+            )
+        , IEndScope
+        , IReceive
+            ( AIdent "var_c_inp1_31" )
+        , IScope
+        , IPush
+            ( VaAddr
+                ( AIdent "var_c_inp0_31" )
+            )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_c_inp1_31" )
+            )
         , IPrimBinOp PrimDAdd
         , IEndScope
         , IReceive
-            ( AIdent "var_c_inp0_30" )
+            ( AIdent "var_c_inp0_34" )
+        , IScope
+        , IPush
+            ( VaInt 11 )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_e_x" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "top_e_sinEntry" )
+            )
+        , IEndScope
+        , IReceive
+            ( AIdent "var_c_inp1_34" )
+        , IScope
+        , IPush
+            ( VaAddr
+                ( AIdent "var_c_inp0_34" )
+            )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_c_inp1_34" )
+            )
+        , IPrimBinOp PrimDSub
+        , IEndScope
+        , IReceive
+            ( AIdent "var_c_inp0_37" )
+        , IScope
+        , IPush
+            ( VaInt 13 )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_e_x" )
+            )
+        , ICall
+            ( VaAddr
+                ( AIdent "top_e_sinEntry" )
+            )
+        , IEndScope
+        , IReceive
+            ( AIdent "var_c_inp1_37" )
+        , IScope
+        , IPush
+            ( VaAddr
+                ( AIdent "var_c_inp0_37" )
+            )
+        , IPush
+            ( VaAddr
+                ( AIdent "var_c_inp1_37" )
+            )
+        , IPrimBinOp PrimDAdd
+        , IEndScope
+        , IReceive
+            ( AIdent "var_c_inp0_40" )
         , IScope
         , IPush
             ( VaInt 15 )
@@ -450,14 +450,14 @@
             )
         , IEndScope
         , IReceive
-            ( AIdent "var_c_inp1_30" )
+            ( AIdent "var_c_inp1_40" )
         , IPush
             ( VaAddr
-                ( AIdent "var_c_inp0_30" )
+                ( AIdent "var_c_inp0_40" )
             )
         , IPush
             ( VaAddr
-                ( AIdent "var_c_inp1_30" )
+                ( AIdent "var_c_inp1_40" )
             )
         , IPrimBinOp PrimDSub
         , IExit
