--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -26,7 +26,7 @@ category:
   Language
   , Compiler
 
-tested-with:     GHC ==9.8.4
+tested-with:     GHC ==9.12.2
 data-files:      runtime.h
 data-dir:        data
 
@@ -49,6 +49,7 @@ common extensions
     GADTs
     LambdaCase
     MonoLocalBinds
+    OrPatterns
     OverloadedStrings
     RecordWildCards
     RoleAnnotations
@@ -103,7 +104,7 @@ library
 
   -- Other library packages from which modules are imported.
   build-depends:
-    , base                  ^>=4.19.2.0
+    , base                  ^>=4.21.0.0
     , containers            ^>=0.7
     , directory             ^>=1.3.9.0
     , filepath              ^>=1.5.4.0
@@ -139,7 +140,7 @@ executable lamc
 
   -- Other library packages from which modules are imported.
   build-depends:
-    , base        ^>=4.19.2.0
+    , base
     , lambdacomp
 
   -- Modules included in this executable, other than Main.
@@ -164,7 +165,7 @@ test-suite lambdacomp-test
 
   -- Test dependencies.
   build-depends:
-    , base          ^>=4.19.2.0
+    , base
     , bytestring
     , directory
     , filepath
