--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -103,6 +103,7 @@ library
     LambdaComp.External.Syntax
     LambdaComp.External.ToElaborated
     LambdaComp.Ident
+    LambdaComp.Optimizations
     LambdaComp.PrimOp
 
   -- Other library packages from which modules are imported.
@@ -113,7 +114,7 @@ library
     , filepath              ^>=1.5.4.0
     , megaparsec            ^>=9.7.0
     , mtl                   ^>=2.3.1
-    , optparse-applicative  ^>=0.18.1.0
+    , optparse-applicative  ^>=0.19.0.0
     , parser-combinators    ^>=1.3.0
     , pretty-simple         ^>=4.1.3.0
     , prettyprinter         ^>=1.7.1
